--- a/portfolio/templates/Portfolio/investment_list.html
+++ b/portfolio/templates/Portfolio/investment_list.html
@@ -34,14 +34,13 @@
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
-                <th>Customer Number</th>
-                <th>Name</th>
-                <th>Address</th>
-                <th>City</th>
-                <th>State</th>
-                <th>Zip</th>
-                <th>Primary Email</th>
-                <th>Cell Phone</th>
+                <th>Cust IDr</th>
+                <th>Category</th>
+                <th>Description</th>
+                <th>Acquired Value</th>
+                <th>Acquired Date</th>
+                <th>Recent Value</th>
+                <th>Recent Date</th>
                 <th colspan="3">Actions</th>
             </tr>
             </thead>
